# vermeter

./: .env.example  .gitignore  LICENSE  README.md  README_DE.md  TODO_NOTES.md  docker-compose.yml
.devcontainer/: README.md  devcontainer.json  docker-compose.devcontainer.yml
.devcontainer/scripts/: postCreate.sh  postStart.sh
.github/workflows/: docs.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  admin_users.py  auth.py  billing.py  landlord.py  tenant.py
backend/app/core/: config.py  database.py  oidc.py  security.py
backend/app/models/: __init__.py  models.py  schemas.py
backend/app/services/: billing.py  graph_engine.py  keycloak_admin.py  storage.py
backend/app/worker/: celery_app.py  tasks.py
docker/: Caddyfile  Dockerfile.caddy  Dockerfile.keycloak  landing.html
docker/scripts/: postgres-init.sh
docker/step-ca/: Dockerfile  entrypoint-wrapper.sh  password.txt
docs/: _config.yml  architecture.md  index.md  package-lock.json  package.json  setup.md  user-roles.md
docs/.vitepress/: config.js
docs/domain/: buildings.md  contracts.md  index.md
docs/roles/: admin.md  caretaker.md  index.md  landlord.md  tenant.md
frontend/: Caddyfile  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  oidc.js
frontend/src/api/: client.js
keycloak/: rental-realm.json
scripts/: create-demo-accounts.sh  setup-stack.sh
(+21 files in other folders)
