[project]
name = "vermeter-backend"
version = "0.1.0"
description = "Backend für den Rental Manager – verwaltet Mieter, Verträge und Abrechnungen"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    # python-jose 3.4.0+ behebt Algorithm-Confusion mit OpenSSH ECDSA-Keys (CVE-2024-33664)
    "python-jose[cryptography]>=3.4.0",
    # cryptography 43.0.1+ behebt NULL-Pointer-Dereferenzierung (CVE-2024-26130)
    "cryptography>=43.0.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.3.6",
    "redis>=5.0.3",
    "networkx>=3.3",
    "aiofiles>=23.2.1",
    "pillow>=10.3.0",
    "reportlab>=4.1.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
